--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 															<img class="img-responsive rounded mx-auto d-block" src="images/profile4.jpg" alt="Zied Bouraoui" width="180" height="250"/>
 														</li>
 														<li>
-															 Associate Professor - Maître de conférences HDR<br/>
+															 Full Professor - Professeur des universités<br/>
 															 Université d’Artois, 
 															 CRIL-CNRS UMR 8188.
 														</li>
@@ -126,8 +126,8 @@
 																	</li>
 																	<li>
 																		<h3>Mail</h3>
-																		<p><a href="#">zied.bouraoui@cril.fr</a></p>
-																		<p><a href="#">zied.bouraoui@univ-artois.fr</a></p>
+																		<p><a href="#">zied(dot)bouraoui(at)cril(dot)fr</a></p>
+																		<p><a href="#">zied(dot)bouraoui(at)univ-artois(dot)fr</a></p>
 																	</li>
 																	<li>
 																		<h3>Phone</h3>
@@ -147,34 +147,41 @@
 								<!-- Blog -->
 									<section>
 										<header class="major">
-											<h2>News</h2>
+										<h2>News</h2>
 										</header>
 										<article class="box post">
 										<header>
-										  <h3>ECSQARU 2023 </h3>
+										<h3>IARML 2025</h3>
 										</header>
-									      <p> the European Conference on Symbolic and Quantitative Approaches to Reasoning with Uncertainty (ECSQARU 2023) will be held in Arras (France), on September 19-22, 2023
-									          <a class="more-link" href="https://www.cril.univ-artois.fr/ecsqaru23/" target="_blank"><i class="fa fa-external-link"></i> Find out more</a>
-										  </p>
-										
+									        <p> 4th Workshop on the Interactions between Analogical Reasoning and Machine Learning - IJCAI 2025, Montreal, Canada - August 16-22, 2025.
+									        <a class="more-link" href="https://iarml-workshop.github.io" target="_blank"><i class="fa fa-external-link"></i>Find out more</a>
+									        </p>
+										</header>
+																					<header>
+										<h3>PRINCIPIA ANALOGIAE 2025</h3>
+										</header>
+									        <p> PRINCIPIA ANALOGIAE 2025 - JUNE 19-21, 2025 - LISBON, PORTUGAL.
+									        <a class="more-link" href="https://analogiae.tecnico.ulisboa.pt/#home" target="_blank"><i class="fa fa-external-link"></i>Find out more</a>
+									        </p>
 										</header>
 
-										<header>
-											<h3>Open Positions</h3>
+										<!-- <header>
+									        <h3>Open Positions</h3>
 										</header>
 											 <p> 2 years Postdoctoral position on Learning and Reasoning. 
 												<font color="blue">Deadline for applications: 1st May 2023. Start date: 1st September 2023 (or as soon as possible thereafter) </font> 
 												For more details about the position and instructions on how to apply,  please feel free to contact me.
 											   <!-- <a class="more-link" href="" target="_blank"><i class="fa fa-file-pdf-o"></i>pdf</a>-->
-										     </p>
+										<!--      </p>
 											 <p>1 year Research Engineer position.
 												<font color="blue">Deadline for applications: 1st May 2023. Start date: 1st September 2023 (or as soon as possible thereafter) </font>  
 												 For more details about the position and instructions on how to apply,  please feel free to contact me.
 												<!--<a class="more-link" href="" target="_blank"><i class="fa fa-file-pdf-o"></i>pdf</a>-->
-									       	</p>
+									      <!--  	</p>
 											<p> 2 PhD Scholarship on NLP 2023-2026 <font color="blue"> Deadline for applications: May 5th, 2023. Start date: 1st September/October 2023 </font> 
 												For more details about the position and instructions on how to apply,  please feel free to contact me.
 											</p>
+											-->
 										</article>
 									</section>
 							</div>
